--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
             <li class="team__item">
-              <img class="team__photo" src="./img/img3.webp" alt="Worker1" />
+              <picture>
+                <source srcset="./img/mobile/team-worker1@mobile-1x.webp 1x, ./img/mobile/team-worker1@mobile-2x.webp 2x" media="(min-width: 320px)">
+                <source srcset="./img/tablet/team-worker1@tablet-1x.webp 1x, ./img/tablet/team-worker1@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/desktop/team-worker1@desktop-1x.webp 1x, ./img/desktop/team-worker1@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <img class="team__photo" src="./img/mobile/team-worker1@mobile-1x.webp" alt="Worker1" />
+              </picture>
               <h3 class="team__name">Ігор Дем'яненко</h3>
               <p class="team__job">Product Designer</p>
               <div class="team__icons">
@@ -172,7 +177,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img class="team__photo" src="./img/img4.webp" alt="Worker2" />
+              <picture>
+                <source srcset="./img/mobile/team-worker2@mobile-1x.webp 1x, ./img/mobile/team-worker2@mobile-2x.webp 2x" media="(min-width: 320px)">
+                <source srcset="./img/tablet/team-worker2@tablet-1x.webp 1x, ./img/tablet/team-worker2@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/desktop/team-worker2@desktop-1x.webp 1x, ./img/desktop/team-worker2@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <img class="team__photo" src="./img/mobile/team-worker2@mobile-1x.webp" alt="Worker2" />
+              </picture>
               <h3 class="team__name">Ольга Рєпіна</h3>
               <p class="team__job">Frontend Developer</p>
               <div class="team__icons">
@@ -199,7 +209,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img class="team__photo" src="./img/img5.webp" alt="Worker3" />
+              <picture>
+                <source srcset="./img/mobile/team-worker3@mobile-1x.webp 1x, ./img/mobile/team-worker3@mobile-2x.webp 2x" media="(min-width: 320px)">
+                <source srcset="./img/tablet/team-worker3@tablet-1x.webp 1x, ./img/tablet/team-worker3@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/desktop/team-worker3@desktop-1x.webp 1x, ./img/desktop/team-worker3@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <img class="team__photo" src="./img/mobile/team-worker3@mobile-1x.webp" alt="Worker3" />
+              </picture>
               <h3 class="team__name">Микола Тарасов</h3>
               <p class="team__job">Marketing</p>
               <div class="team__icons">
@@ -226,7 +241,12 @@
               </div>
             </li>
             <li class="team__item">
-              <img class="team__photo" src="./img/img6.webp" alt="Worker4" />
+              <picture>
+                <source srcset="./img/mobile/team-worker4@mobile-1x.webp 1x, ./img/mobile/team-worker4@mobile-2x.webp 2x" media="(min-width: 320px)">
+                <source srcset="./img/tablet/team-worker4@tablet-1x.webp 1x, ./img/tablet/team-worker4@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/desktop/team-worker4@desktop-1x.webp 1x, ./img/desktop/team-worker4@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <img class="team__photo" src="./img/mobile/team-worker4@mobile-1x.webp" alt="Worker4" />
+              </picture>
               <h3 class="team__name">Михайло Єрмаков</h3>
               <p class="team__job">UI Designer</p>
               <div class="team__icons">
