--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -98,10 +98,10 @@
                 <picture>
                   <source
                     srcset="
-                      ../img/mobile/posters-laptop@mobile-1x.webp 1x,
-                      ../img/mobile/posters-laptop@mobile-2x.webp 2x
+                      ../img/desktop/posters-laptop@desktop-1x.webp 1x,
+                      ../img/desktop/posters-laptop@desktop-2x.webp 2x
                     "
-                    media="(min-width: 320px)"
+                    media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
@@ -112,10 +112,10 @@
                   />
                   <source
                     srcset="
-                      ../img/desktop/posters-laptop@desktop-1x.webp 1x,
-                      ../img/desktop/posters-laptop@desktop-2x.webp 2x
+                      ../img/mobile/posters-laptop@mobile-1x.webp 1x,
+                      ../img/mobile/posters-laptop@mobile-2x.webp 2x
                     "
-                    media="(min-width: 1200px)"
+                    media="(min-width: 320px)"
                   />
                   <img
                     class="hero__image"
@@ -139,10 +139,10 @@
                 <picture>
                   <source
                     srcset="
-                      ../img/mobile/posters-basketball@mobile-1x.webp 1x,
-                      ../img/mobile/posters-basketball@mobile-2x.webp 2x
+                      ../img/desktop/posters-basketball@desktop-1x.webp 1x,
+                      ../img/desktop/posters-basketball@desktop-2x.webp 2x
                     "
-                    media="(min-width: 320px)"
+                    media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
@@ -153,10 +153,10 @@
                   />
                   <source
                     srcset="
-                      ../img/desktop/posters-basketball@desktop-1x.webp 1x,
-                      ../img/desktop/posters-basketball@desktop-2x.webp 2x
+                      ../img/mobile/posters-basketball@mobile-1x.webp 1x,
+                      ../img/mobile/posters-basketball@mobile-2x.webp 2x
                     "
-                    media="(min-width: 1200px)"
+                    media="(min-width: 320px)"
                   />
                   <img
                     class="hero__image"
@@ -180,10 +180,10 @@
                 <picture>
                   <source
                     srcset="
-                      ../img/mobile/posters-fish@mobile-1x.webp 1x,
-                      ../img/mobile/posters-fish@mobile-2x.webp 2x
+                      ../img/desktop/posters-fish@desktop-1x.webp 1x,
+                      ../img/desktop/posters-fish@desktop-2x.webp 2x
                     "
-                    media="(min-width: 320px)"
+                    media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
@@ -194,10 +194,10 @@
                   />
                   <source
                     srcset="
-                      ../img/desktop/posters-fish@desktop-1x.webp 1x,
-                      ../img/desktop/posters-fish@desktop-2x.webp 2x
+                      ../img/mobile/posters-fish@mobile-1x.webp 1x,
+                      ../img/mobile/posters-fish@mobile-2x.webp 2x
                     "
-                    media="(min-width: 1200px)"
+                    media="(min-width: 320px)"
                   />
                   <img
                     class="hero__image"
@@ -220,26 +220,26 @@
                 </div>
                 <picture>
                   <source
-                  srcset="
-                    ../img/mobile/posters-headphones@mobile-1x.webp 1x,
-                    ../img/mobile/posters-headphones@mobile-2x.webp 2x
-                  "
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="
-                    ../img/tablet/posters-headphones@tablet-1x.webp 1x,
-                    ../img/tablet/posters-headphones@tablet-2x.webp 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
-                    ../img/desktop/posters-headphones@desktop-1x.webp 1x,
-                    ../img/desktop/posters-headphones@desktop-2x.webp 2x
-                  "
-                  media="(min-width: 1200px)"
-                />
+                    srcset="
+                      ../img/desktop/posters-headphones@desktop-1x.webp 1x,
+                      ../img/desktop/posters-headphones@desktop-2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/tablet/posters-headphones@tablet-1x.webp 1x,
+                      ../img/tablet/posters-headphones@tablet-2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/mobile/posters-headphones@mobile-1x.webp 1x,
+                      ../img/mobile/posters-headphones@mobile-2x.webp 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
                   <img
                     class="hero__image"
                     src="../img/mobile/posters-headphones@mobile-1x.webp"
@@ -261,29 +261,32 @@
                 </div>
                 <picture>
                   <source
-                  srcset="
-                    ../img/mobile/posters-box@mobile-1x.webp 1x,
-                    ../img/mobile/posters-box@mobile-2x.webp 2x
-                  "
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="
-                    ../img/tablet/posters-box@tablet-1x.webp 1x,
-                    ../img/tablet/posters-box@tablet-2x.webp 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
-                    ../img/desktop/posters-box@desktop-1x.webp 1x,
-                    ../img/desktop/posters-box@desktop-2x.webp 2x
-                  "
-                  media="(min-width: 1200px)"
-                />
-                  <img class="hero__image" src="../img/mobile/posters-box@mobile-1x.webp" alt="box" />
+                    srcset="
+                      ../img/desktop/posters-box@desktop-1x.webp 1x,
+                      ../img/desktop/posters-box@desktop-2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/tablet/posters-box@tablet-1x.webp 1x,
+                      ../img/tablet/posters-box@tablet-2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/mobile/posters-box@mobile-1x.webp 1x,
+                      ../img/mobile/posters-box@mobile-2x.webp 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    class="hero__image"
+                    src="../img/mobile/posters-box@mobile-1x.webp"
+                    alt="box"
+                  />
                 </picture>
-
                 <h3 class="hero__title">Проєкт Boxes</h3>
                 <p class="hero__work">Додаток</p>
               </li>
@@ -299,29 +302,32 @@
                 </div>
                 <picture>
                   <source
-                  srcset="
-                    ../img/mobile/posters-pc@mobile-1x.webp 1x,
-                    ../img/mobile/posters-pc@mobile-2x.webp 2x
-                  "
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="
-                    ../img/tablet/posters-pc@tablet-1x.webp 1x,
-                    ../img/tablet/posters-pc@tablet-2x.webp 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
-                    ../img/desktop/posters-pc@desktop-1x.webp 1x,
-                    ../img/desktop/posters-pc@desktop-2x.webp 2x
-                  "
-                  media="(min-width: 1200px)"
-                />
-                  <img class="hero__image" src="../img/mobile/posters-pc@mobile-1x.webp" alt="pc" />
+                    srcset="
+                      ../img/desktop/posters-pc@desktop-1x.webp 1x,
+                      ../img/desktop/posters-pc@desktop-2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/tablet/posters-pc@tablet-1x.webp 1x,
+                      ../img/tablet/posters-pc@tablet-2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/mobile/posters-pc@mobile-1x.webp 1x,
+                      ../img/mobile/posters-pc@mobile-2x.webp 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    class="hero__image"
+                    src="../img/mobile/posters-pc@mobile-1x.webp"
+                    alt="pc"
+                  />
                 </picture>
-                
                 <h3 class="hero__title">Inspiration has no Borders</h3>
                 <p class="hero__work">Веб-сайт</p>
               </li>
@@ -337,29 +343,32 @@
                 </div>
                 <picture>
                   <source
-                  srcset="
-                    ../img/mobile/posters-book@mobile-1x.webp 1x,
-                    ../img/mobile/posters-book@mobile-2x.webp 2x
-                  "
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="
-                    ../img/tablet/posters-book@tablet-1x.webp 1x,
-                    ../img/tablet/posters-book@tablet-2x.webp 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
-                    ../img/desktop/posters-book@desktop-1x.webp 1x,
-                    ../img/desktop/posters-book@desktop-2x.webp 2x
-                  "
-                  media="(min-width: 1200px)"
-                />
-                  <img class="hero__image" src="../img/mobile/posters-book@mobile-1x.webp" alt="book" />
+                    srcset="
+                      ../img/desktop/posters-book@desktop-1x.webp 1x,
+                      ../img/desktop/posters-book@desktop-2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/tablet/posters-book@tablet-1x.webp 1x,
+                      ../img/tablet/posters-book@tablet-2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/mobile/posters-book@mobile-1x.webp 1x,
+                      ../img/mobile/posters-book@mobile-2x.webp 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    class="hero__image"
+                    src="../img/mobile/posters-book@mobile-1x.webp"
+                    alt="book"
+                  />
                 </picture>
-                
                 <h3 class="hero__title">Видання Limited Edition</h3>
                 <p class="hero__work">Дизайн</p>
               </li>
@@ -375,27 +384,31 @@
                 </div>
                 <picture>
                   <source
-                  srcset="
-                    ../img/mobile/posters-label@mobile-1x.webp 1x,
-                    ../img/mobile/posters-label@mobile-2x.webp 2x
-                  "
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="
-                    ../img/tablet/posters-label@tablet-1x.webp 1x,
-                    ../img/tablet/posters-label@tablet-2x.webp 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
-                    ../img/desktop/posters-label@desktop-1x.webp 1x,
-                    ../img/desktop/posters-label@desktop-2x.webp 2x
-                  "
-                  media="(min-width: 1200px)"
-                />
-                  <img class="hero__image" src="../img/mobile/posters-label@mobile-1x.webp" alt="label" />
+                    srcset="
+                      ../img/desktop/posters-label@desktop-1x.webp 1x,
+                      ../img/desktop/posters-label@desktop-2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/tablet/posters-label@tablet-1x.webp 1x,
+                      ../img/tablet/posters-label@tablet-2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/mobile/posters-label@mobile-1x.webp 1x,
+                      ../img/mobile/posters-label@mobile-2x.webp 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    class="hero__image"
+                    src="../img/mobile/posters-label@mobile-1x.webp"
+                    alt="label"
+                  />
                 </picture>
                 <h3 class="hero__title">Проєкт LAB</h3>
                 <p class="hero__work">Маркетинг</p>
@@ -412,27 +425,31 @@
                 </div>
                 <picture>
                   <source
-                  srcset="
-                    ../img/mobile/posters-work@mobile-1x.webp 1x,
-                    ../img/mobile/posters-work@mobile-2x.webp 2x
-                  "
-                  media="(min-width: 320px)"
-                />
-                <source
-                  srcset="
-                    ../img/tablet/posters-work@tablet-1x.webp 1x,
-                    ../img/tablet/posters-work@tablet-2x.webp 2x
-                  "
-                  media="(min-width: 768px)"
-                />
-                <source
-                  srcset="
-                    ../img/desktop/posters-work@desktop-1x.webp 1x,
-                    ../img/desktop/posters-work@desktop-2x.webp 2x
-                  "
-                  media="(min-width: 1200px)"
-                />
-                  <img class="hero__image" src="../img/mobile/posters-work@mobile-1x.webp" alt="work" />
+                    srcset="
+                      ../img/desktop/posters-work@desktop-1x.webp 1x,
+                      ../img/desktop/posters-work@desktop-2x.webp 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/tablet/posters-work@tablet-1x.webp 1x,
+                      ../img/tablet/posters-work@tablet-2x.webp 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ../img/mobile/posters-work@mobile-1x.webp 1x,
+                      ../img/mobile/posters-work@mobile-2x.webp 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    class="hero__image"
+                    src="../img/mobile/posters-work@mobile-1x.webp"
+                    alt="work"
+                  />
                 </picture>
                 <h3 class="hero__title">Growing Business</h3>
                 <p class="hero__work">Додаток</p>
