--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           <ul class="team__list">
             <li class="team__item">
               <picture>
-                <source srcset="./img/mobile/team-worker1@mobile-1x.webp 1x, ./img/mobile/team-worker1@mobile-2x.webp 2x" media="(min-width: 320px)">
-                <source srcset="./img/tablet/team-worker1@tablet-1x.webp 1x, ./img/tablet/team-worker1@tablet-2x.webp 2x," media="(min-width: 768px)">
                 <source srcset="./img/desktop/team-worker1@desktop-1x.webp 1x, ./img/desktop/team-worker1@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <source srcset="./img/tablet/team-worker1@tablet-1x.webp 1x, ./img/tablet/team-worker1@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/mobile/team-worker1@mobile-1x.webp 1x, ./img/mobile/team-worker1@mobile-2x.webp 2x" media="(min-width: 320px)">
                 <img class="team__photo" src="./img/mobile/team-worker1@mobile-1x.webp" alt="Worker1" />
               </picture>
               <h3 class="team__name">Ігор Дем'яненко</h3>
@@ -178,9 +178,9 @@
             </li>
             <li class="team__item">
               <picture>
-                <source srcset="./img/mobile/team-worker2@mobile-1x.webp 1x, ./img/mobile/team-worker2@mobile-2x.webp 2x" media="(min-width: 320px)">
-                <source srcset="./img/tablet/team-worker2@tablet-1x.webp 1x, ./img/tablet/team-worker2@tablet-2x.webp 2x," media="(min-width: 768px)">
                 <source srcset="./img/desktop/team-worker2@desktop-1x.webp 1x, ./img/desktop/team-worker2@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <source srcset="./img/tablet/team-worker2@tablet-1x.webp 1x, ./img/tablet/team-worker2@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/mobile/team-worker2@mobile-1x.webp 1x, ./img/mobile/team-worker2@mobile-2x.webp 2x" media="(min-width: 320px)">
                 <img class="team__photo" src="./img/mobile/team-worker2@mobile-1x.webp" alt="Worker2" />
               </picture>
               <h3 class="team__name">Ольга Рєпіна</h3>
@@ -210,9 +210,9 @@
             </li>
             <li class="team__item">
               <picture>
-                <source srcset="./img/mobile/team-worker3@mobile-1x.webp 1x, ./img/mobile/team-worker3@mobile-2x.webp 2x" media="(min-width: 320px)">
-                <source srcset="./img/tablet/team-worker3@tablet-1x.webp 1x, ./img/tablet/team-worker3@tablet-2x.webp 2x," media="(min-width: 768px)">
                 <source srcset="./img/desktop/team-worker3@desktop-1x.webp 1x, ./img/desktop/team-worker3@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <source srcset="./img/tablet/team-worker3@tablet-1x.webp 1x, ./img/tablet/team-worker3@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/mobile/team-worker3@mobile-1x.webp 1x, ./img/mobile/team-worker3@mobile-2x.webp 2x" media="(min-width: 320px)">
                 <img class="team__photo" src="./img/mobile/team-worker3@mobile-1x.webp" alt="Worker3" />
               </picture>
               <h3 class="team__name">Микола Тарасов</h3>
@@ -242,9 +242,9 @@
             </li>
             <li class="team__item">
               <picture>
-                <source srcset="./img/mobile/team-worker4@mobile-1x.webp 1x, ./img/mobile/team-worker4@mobile-2x.webp 2x" media="(min-width: 320px)">
-                <source srcset="./img/tablet/team-worker4@tablet-1x.webp 1x, ./img/tablet/team-worker4@tablet-2x.webp 2x," media="(min-width: 768px)">
                 <source srcset="./img/desktop/team-worker4@desktop-1x.webp 1x, ./img/desktop/team-worker4@desktop-2x.webp 2x," media="(min-width: 1200px)">
+                <source srcset="./img/tablet/team-worker4@tablet-1x.webp 1x, ./img/tablet/team-worker4@tablet-2x.webp 2x," media="(min-width: 768px)">
+                <source srcset="./img/mobile/team-worker4@mobile-1x.webp 1x, ./img/mobile/team-worker4@mobile-2x.webp 2x" media="(min-width: 320px)">
                 <img class="team__photo" src="./img/mobile/team-worker4@mobile-1x.webp" alt="Worker4" />
               </picture>
               <h3 class="team__name">Михайло Єрмаков</h3>
@@ -400,7 +400,7 @@
     <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <form action="" class="modal__form">
-          <button data-modal-close type="submit" class="modal-btnclose">
+          <button data-modal-close type="submit" class="modal__btnclose">
             <svg class="modal__close">
               <use href="./img/symbol-defs.svg#icon-close"></use>
             </svg>
