--- a/index.html
+++ b/index.html
@@ -472,24 +472,26 @@
           <a href="/" class="menu__link">Контакти</a>
         </li>
       </ul>
-      <ul class="menu__list2">
-        <li class="menu__items">
-          <a href="tel:+380961111111" class="menu__number">
-            +38 096 111 11 11
-          </a>
-        </li>
-        <li class="menu__items">
-          <a href="mailto:info@devstudio.com" class="menu__email">
-            info@devstudio.com
-          </a>
-        </li>
-      </ul>
-      <ul class="menu__list3">
-          <li class="menu__itm"><a href="https://www.instagram.com" class="menu__contacts">Instagram</a></li>
-          <li class="menu__itm"><a href="https://www.twitter.com" class="menu__contacts">Twitter</a></li>
-          <li class="menu__itm"><a href="https://www.facebook.com" class="menu__contacts">Facebook</a></li>
-          <li class="menu__itm"><a href="https://www.linkedin.com" class="menu__contacts">LinkedIn</a></li>
-      </ul>
+      <div class="menu__containers">
+        <ul class="menu__list2">
+          <li class="menu__items">
+            <a href="tel:+380961111111" class="menu__number">
+              +38 096 111 11 11
+            </a>
+          </li>
+          <li class="menu__items">
+            <a href="mailto:info@devstudio.com" class="menu__email">
+              info@devstudio.com
+            </a>
+          </li>
+        </ul>
+        <ul class="menu__list3">
+            <li class="menu__itm"><a href="https://www.instagram.com" class="menu__contacts">Instagram</a></li>
+            <li class="menu__itm"><a href="https://www.twitter.com" class="menu__contacts">Twitter</a></li>
+            <li class="menu__itm"><a href="https://www.facebook.com" class="menu__contacts">Facebook</a></li>
+            <li class="menu__itm"><a href="https://www.linkedin.com" class="menu__contacts">LinkedIn</a></li>
+        </ul>
+      </div>
     </div>
     <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
